@@ -1,33 +1,32 @@
 package ru.practicum.mapper;
 
-import ru.practicum.dto.request.ParticipationRequestDTO.Response.ParticipationRequestDto;
+import ru.practicum.dto.request.ParticipationRequestDto;
 import ru.practicum.model.ParticipationRequest;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
-public class ParticipationRequestMapper {
-    /**
-     * Don't let anyone instantiate this class.
-     */
+public final class ParticipationRequestMapper {
     private ParticipationRequestMapper() {
-
     }
 
     public static ParticipationRequestDto toParticipationRequestDto(ParticipationRequest request) {
-        return ParticipationRequestDto.builder()
-                .id(request.getId())
-                .created(request.getCreated())
-                .event(request.getEvent().getId())
-                .requester(request.getRequester().getId())
-                .status(request.getStatus())
-                .build();
+        if (request == null) {
+            return null;
+        }
 
+        return new ParticipationRequestDto(
+                request.getId(),
+                request.getEvent().getId(),
+                request.getRequester().getId(),
+                request.getStatus(),
+                request.getCreated()
+        );
     }
 
     public static List<ParticipationRequestDto> toParticipationRequestDtoList(List<ParticipationRequest> requests) {
         return requests.stream()
                 .map(ParticipationRequestMapper::toParticipationRequestDto)
-                .toList();
+                .collect(Collectors.toList());
     }
-
 }
